[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/HUD/bannerHanging.png" type="Texture" id=1]
[ext_resource path="res://GFX/Players/bunny1_stand.png" type="Texture" id=2]
[ext_resource path="res://GFX/Players/bunny2_stand.png" type="Texture" id=3]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu/CharacterChoice.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 4 )

[node name="CharacterChoice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.105882, 0.32549, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerCoice1" type="TextureRect" parent="HBoxContainer"]
margin_right = 462.0
margin_bottom = 600.0
size_flags_horizontal = 3
texture = ExtResource( 2 )

[node name="Choice1" type="TextureButton" parent="HBoxContainer/PlayerCoice1"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_min_size = Vector2( 0, 95 )
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/PlayerCoice1"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 3.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 95 )
custom_fonts/font = SubResource( 1 )
text = "SELECT"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerChoice2" type="TextureRect" parent="HBoxContainer"]
margin_left = 562.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Choice2" type="TextureButton" parent="HBoxContainer/PlayerChoice2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_min_size = Vector2( 0, 95 )
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/PlayerChoice2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 3.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 95 )
custom_fonts/font = SubResource( 1 )
text = "SELECT"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -76.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/PlayerCoice1/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayerChoice2/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
